app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: openshift-hello
  name: openshift-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-hello
  template:
    metadata:
      labels:
        app: openshift-hello
    spec:
      containers:
      - name: openshift-hello
        imagePullPolicy: Always
        image: shaozhendemoregistry.azurecr.io/mobb/hello-openshift:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
