app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-hello
  name: openshift-hello
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: openshift-hello
    weight: 100
